--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -57,6 +57,11 @@
     }
 }
 
+.post-subtitle{
+    color: #6e6e6e;
+    margin-bottom: 80px;
+}
+
 .post-tags {
     color: #aaa;
     font-weight: 300;
