--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-
   {% include head.html %}
 
   {% if page.url == "/404.html" %}
   <meta http-equiv="refresh" content="10; url={{ site.baseurl }}">
   {% endif %}
-
 </head>
 
 <body>
-  <header class="post-header">
-    <center>
-      <div class="post-title">{{ page.title }}</div>
-      <div class="post-subtitle"><p>{{ page.subtitle }}</p></div>
-    </center>
-  </header>
+  <div class="container is-max-widescreen">
+    <div class="tile">
+      <h1>Gide&atilde;o Santana</h1>
+    </div>
+    <div class="tile is-ancestor">
+      <div class="tile is-parent">
+        <div class="tile is-child is-2 is-vertical">
+          {% include menu.html %}
+        </div>
+        <div class="tile is-child">
+          <h1 class="title page-title">{{ page.title }}</h1>
+          <h4>{{ page.subtitle }}</h4>
 
-  <div class="wrapper">
-    <div class="post-content">
-      {{ content }}
+          <div class="content">
+            {{ content }}
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-
-  {% include footer.html %}
 </body>
 </html>
