--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,33 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-  {% include head.html %}
+---
+layout: default
+---
 
-  {% if page.url == "/404.html" %}
-  <meta http-equiv="refresh" content="10; url={{ site.baseurl }}">
-  {% endif %}
-</head>
+<section class="post">
+  <h2>{{ page.title }}</h2>
+  {{ content }}
+</section>
 
-<body>
-  <div class="container is-max-widescreen">
-    <div class="tile">
-      <h1>Gide&atilde;o Santana</h1>
-    </div>
-    <div class="tile is-ancestor">
-      <div class="tile is-parent">
-        <div class="tile is-child is-2 is-vertical">
-          {% include menu.html %}
-        </div>
-        <div class="tile is-child">
-          <h1 class="title page-title">{{ page.title }}</h1>
-          <h4>{{ page.subtitle }}</h4>
 
-          <div class="content">
-            {{ content }}
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</body>
-</html>
+
